--- a/templates/lga.html
+++ b/templates/lga.html
@@ -63,5 +63,6 @@
     </p>
     <a style="text-decoration: none;" href="/lga/">Click me to go back to LGA list</a>
     {% endif %}
+  <a style="text-decoration: none;" href="/">Back to home</a>
   </body>
 </html>
