--- a/templates/new_pu.html
+++ b/templates/new_pu.html
@@ -63,6 +63,7 @@
           `;
         partyFields.appendChild(partyField);
       }
-    </script>
+    </script><br><br>
+  <a style="text-decoration: none;" href="/">Back to home</a>
   </body>
 </html>
