--- a/templates/polling_result.html
+++ b/templates/polling_result.html
@@ -24,4 +24,5 @@
     </table>
     <p>The total votes for the polling unit with id equals {{ id }} is {{ total_votes }}.</p>
   </body>
+  <a style="text-decoration: none;" href="/">Back to home</a>
 </html>
